Feat: more api endpoints
